(Gtkada-Entry_Completion): fix handling of "Up" key so that it  wraps from beginning to end. LB30-023 (Open From Project): also search in the run time library. Remove no longer needed entries in gps.css
git-svn-id: svn+ssh://svn.eu.adacore.com/Dev/branches/global/gtk3/gps@209964 936e1b1b-40f2-da11-902a-00137254ae57

--- a/share/gps.css
+++ b/share/gps.css
@@ -55,26 +55,8 @@ GtkEntry.search {
   border-bottom:0px;
 }
 
-.completion-list .button {
-   padding: 1px 1px 1px 4px;
-   border-style: none;
-   background-color: white;
-   background-image: none;
-   border-style: none;
-}
-.completion-list .button:hover {
-   background-color: shade(white, 0.95);
-}
-.completion-list .button:focus {
-   background-color: shade(white, 0.9);
-}
-.completion-short {
-   color: green;
-   font-size: 15px;
-   font-weight: bold;
-}
-.completion-long {
-   color: gray;
+.completion-list {
+   /* The list of possible completions, in a completion entry */
 }
 
 /*
